# sbtu-mcp-server

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_LOG.md  Dockerfile  GEMINI.md  LICENSE  README.md  push_to_github.sh  pyproject.toml  server-sbtu.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  tests.yml
.mcp/: server.json
docs/: _config.yml  index.md
src/sbtumcp/: __init__.py  main.py  sbtumpcmain.py
