[project]
name = "sbtu-mcp-server"
version = "0.2.0"
description = "MCP server for SBTU Tech Ecosystem — integrates Claude AI with Android device via ADB and local Ollama LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
